# Theme-replay-agent

./: .gitignore  CHECKPOINT_5_SUMMARY.md  CLI_IMPLEMENTATION_COMPLETE.md  DATA_LAYER_IMPLEMENTATION.md  EMOTION_CYCLE_IMPLEMENTATION_SUMMARY.md  FINAL_CHECKPOINT_SUMMARY.md  FIXES_COMPLETE.md  FIXES_SUMMARY.md  LLM_ENGINE_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS_VERIFICATION_TASK_4.5.md  SECTOR_FILTER_UPDATE.md  SETUP_COMPLETE.md  TASK_10_COMPLETION_SUMMARY.md  TASK_4.5_COMPLETION_SUMMARY.md  TASK_4.7_COMPLETION_SUMMARY.md  TASK_6.1_COMPLETION_SUMMARY.md  TASK_7.1_COMPLETION_SUMMARY.md  TASK_8.1_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  checkpoint_verification.py  pyproject.toml  test_comprehensive_system.py  test_emotion_cycle_integration.py  test_end_to_end.py  test_fixes.py  test_llm_real.py  test_llm_simple.py  test_quick_verify.py  test_sector_filter_logic.py  theme_cli.bat  theme_cli.py  verify_cli.py  verify_report_data.py  verify_report_generator.py  verify_setup.py
config/: __init__.py  config.example.yaml  config_manager.py
docs/: CLI_USAGE_GUIDE.md  CONFIGURATION_GUIDE.md  EMOTION_CYCLE_ANALYSIS.md  LLM_ENGINE_GUIDE.md  LLM_INTEGRATION.md  PROMPT_ENGINEERING.md  QUICKSTART.md
examples/: __init__.py  example_basic_analysis.py  example_capacity_profiler.py  example_cli_usage.py  example_custom_prompts.py  example_data_layer.py  example_emotion_cycle_analysis.py  example_llm_config.py  example_llm_engine.py  example_report_generator.py  example_theme_anchor_agent.py
prompts/: README.md  emotion_cycle.md  market_intent.md  (+2 more)
(+36 files in other folders)
